# latentjam

./: .gitignore  ARCHITECTURE_NOTES.md  FORK_NOTICE.md  NOTICE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: CONTRIBUTING.md
.github/workflows/: android.yml  lint.yml
app/: build.gradle
app/src/debug/res/values/: donottranslate.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/ml/: embedding_version.txt  predictor_version.txt
app/src/main/cpp/: CMakeLists.txt  audio_decode_common.h  linear_resampler.cpp  m4a_aac_decoder.cpp  native_audio_decoder.cpp  opus_fast_decoder.cpp
app/src/main/cpp/fdkaac_shim/log/: log.h
app/src/main/res/drawable/: ic_latentjam_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_shuffle_star_24.xml  ic_splash_anim.xml  ic_star_24.xml  ic_star_outline_24.xml
app/src/main/res/layout/: dialog_accent.xml  dialog_edit_metadata.xml  dialog_error_details.xml  dialog_menu.xml  dialog_music_choices.xml  dialog_music_locations.xml  dialog_playlist_export.xml  dialog_pre_amp.xml  dialog_separators.xml  dialog_song_detail.xml  dialog_sort.xml  dialog_tabs.xml  fragment_about.xml  fragment_detail.xml  fragment_favorites.xml  fragment_home.xml  fragment_home_list.xml  fragment_main.xml  fragment_playback_bar.xml  fragment_playback_panel.xml  fragment_preferences.xml  fragment_queue.xml  fragment_search.xml  item_accent.xml  item_album_song.xml  item_disc_header.xml  item_edit_header.xml  item_editable_song.xml  item_favorites_playlist.xml  item_header.xml  item_menu_option.xml  item_music_location.xml  item_new_playlist_choice.xml  item_no_locations.xml  item_parent.xml  item_picker_choice.xml  item_song.xml  item_song_property.xml  item_sort_header.xml  item_tab.xml  (+14 more)
app/src/main/res/layout-h360dp/: fragment_detail.xml  fragment_playback_panel.xml
app/src/main/res/layout-h480dp/: fragment_detail.xml  fragment_playback_panel.xml
app/src/main/res/layout-h520dp/: fragment_playback_panel.xml
app/src/main/res/layout-sw600dp/: fragment_detail.xml
app/src/main/res/layout-w600dp/: fragment_detail.xml
app/src/main/res/layout-w720dp/: fragment_main.xml
app/src/main/res/menu/: playback_song.xml  song.xml
app/src/main/res/navigation/: inner.xml  outer.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-ar-rIQ/: strings.xml
app/src/main/res/values-az/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-cy/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-ia/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-lo/: strings.xml
app/src/main/res/values-lt/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night-v27/: styles_core.xml
fastlane/metadata/android/az/: full_description.txt
fastlane/metadata/android/be/: full_description.txt
fastlane/metadata/android/bg/: full_description.txt
fastlane/metadata/android/cs/: full_description.txt
fastlane/metadata/android/de/: full_description.txt
fastlane/metadata/android/en-US/: full_description.txt
fastlane/metadata/android/es-ES/: full_description.txt
fastlane/metadata/android/et/: full_description.txt
fastlane/metadata/android/fa/: full_description.txt
fastlane/metadata/android/fi/: full_description.txt
fastlane/metadata/android/fil/: full_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt
fastlane/metadata/android/gl/: full_description.txt
fastlane/metadata/android/hi/: full_description.txt
fastlane/metadata/android/hr/: full_description.txt
fastlane/metadata/android/hu/: full_description.txt
fastlane/metadata/android/in/: full_description.txt
fastlane/metadata/android/it/: full_description.txt
fastlane/metadata/android/ja/: full_description.txt
fastlane/metadata/android/ko/: full_description.txt
fastlane/metadata/android/lo/: full_description.txt
fastlane/metadata/android/lt/: full_description.txt
fastlane/metadata/android/ml/: full_description.txt
fastlane/metadata/android/nl-NL/: full_description.txt
fastlane/metadata/android/nn/: full_description.txt
fastlane/metadata/android/pa/: full_description.txt
fastlane/metadata/android/pl/: full_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt
fastlane/metadata/android/pt-PT/: full_description.txt
fastlane/metadata/android/ro/: full_description.txt
fastlane/metadata/android/ru/: full_description.txt
fastlane/metadata/android/sl/: full_description.txt
fastlane/metadata/android/sq/: full_description.txt
fastlane/metadata/android/sr/: full_description.txt
fastlane/metadata/android/sv/: full_description.txt
fastlane/metadata/android/ta/: full_description.txt
fastlane/metadata/android/tr/: full_description.txt
fastlane/metadata/android/uk/: full_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt
fastlane/metadata/android/zh-Hant/: full_description.txt
musikr/: ARCHITECTURE.md  README.md  build.gradle
musikr/src/main/cpp/: JByteArrayRef.cpp  JByteArrayRef.h  JClassRef.cpp  JClassRef.h  JInputStream.cpp  JInputStream.h  JMetadataBuilder.cpp  JMetadataBuilder.h  JObjectRef.cpp  JObjectRef.h  JStringRef.cpp  JStringRef.h  JTagMap.cpp  JTagMap.h  taglib_jni.cpp  util.h
scripts/: analyze-ablation-sweep.py  download-models.sh
(+615 files in other folders)
